--- a/auto-start.yml
+++ b/auto-start.yml
@@ -1,9 +1,17 @@
-name: 🔁 Restart workflow automatically
-        if: always()
+name: Auto Start VPS on Push
+ 
+on:
+  push:
+    branches: [main]
+ 
+jobs:
+  dispatch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📡 Trigger tmate.yml
         run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer YOUR_GITHUB_TOKEN_HERE" \
-            -H "Content-Type: application/json" \
-            https://api.github.com/repos/${{ github.repository }}/dispatches \
-            -d '{"event_type": "create-vps", "client_payload": {"vps_name": "manual-vps", "backup": true}}'
+          curl -X POST https://api.github.com/repos/BiratPaudel10/Biralomain/dispatches \
+            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d '{"event_type": "create-vps", "client_payload": {"vps_name": "autovps", "backup": false}}'
+ 
